# example-vite-plugin-wasmpack

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vite.plugin.wasm-pack.ts
client/: app.html  app.svelte  main.ts
scripts/: prebuild.sh
src/: lib.rs
