cargo-features = ["edition2021"]

[package]
name = "my-webgl-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.39"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
